# PrimFit

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  config.json  main.cpp  out.ply  seg_config.json
3rd_glpk/: CMakeLists.txt
3rd_lpsolve/: CMakeLists.txt
3rd_scip/: CMakeLists.txt
3rd_soplex/: CMakeLists.txt
QuadFit_v4/: CMakeLists.txt
QuadFit_v4/algo/: CMakeLists.txt  ellipsoid.cpp  ellipsoid.h  elliptic_cone.h  elliptic_cylinder.cpp  elliptic_cylinder.h  mesh_factory.cpp  mesh_factory.h  mesh_generater.cpp  mesh_generater.h  partition_simplifier.cpp  partition_simplifier.h  partition_simplifier2.cpp  partition_simplifier2.h  partition_simplifier3.cpp  partition_simplifier3.h  pblp.cpp  pblp.h  pblp2.cpp  pblp2.h  plane.cpp  plane.h  primitive_merger.cpp  primitive_merger.h  quadrics.cpp  quadrics.h  util.cpp  util.h
QuadFit_v4/cli/: arrangement_step_cli.cpp  comfirm_grow.cpp  comfirm_merge.cpp  grow_step_cli.cpp  merge_step_cli.cpp  pblp_step_cli.cpp  quadfit_cli.cpp  remian_patch_valid_area.cpp
QuadFit_v4/cmake/: FindGMP.cmake  FindGUROBI.cmake
QuadFit_v4/gui/: CMakeLists.txt  ui_window.h  window.cpp
QuadFit_v4/io/: io.h  io_construct_element.cpp  io_load.cpp  io_save.cpp
QuadFit_v4/lp/: CMakeLists.txt  linear_program_solver_GLPK.cpp  linear_program_solver_GUROBI.cpp
SegGen/: CMakeLists.txt  Ransac2Seg.cpp  mesh_generater.cpp  mesh_generater.h  util.cpp  util.h  vg2seg.cpp
SegGen/cmake/: libigl.cmake
SegGen/efficient_ransac/: CMakeLists.txt
SegGen/io/: CMakeLists.txt  io.h  io_construct_element.cpp  io_load.cpp  io_save.cpp
SegGen/quadrics/: fitting.cpp  fitting.h
algo/: CMakeLists.txt  elliptic_cone.cpp  elliptic_cylinder.cpp  elliptic_cylinder.h  mesh_factory.h  mesh_generater.cpp  mesh_generater.h  partition_simplifier.cpp  partition_simplifier.h  partition_simplifier2.cpp  partition_simplifier2.h  partition_simplifier3.cpp  partition_simplifier3.h  pblp.cpp  pblp.h  pblp2.cpp  pblp2.h  plane.cpp  plane.h  primitive_merger.cpp  primitive_merger.h  quadrics.cpp  quadrics.h  util.cpp  util.h
arrangement/: Arrangement.cpp  Arrangement.h  CMakeLists.txt  EigenTypedef.h  FastArrangement.cpp  FastArrangement.h  MatrixUtils.inl  MeshArrangement.cpp  MeshArrangement.h
cli/: Ransac2Seg.cpp  arrangement_step_cli.cpp  batch_pblp_step_cli.cpp  comfirm_arrangement.cpp  comfirm_curve.cpp  comfirm_seg.cpp  grow_step_cli.cpp  merge_step_cli.cpp  pblp_step_cli.cpp  primfit_cli.cpp  vg2seg.cpp  xyz2ply.cpp
cmake/: cli11.cmake
data/subset_abc_ply/: 00863732_1_10000.ply  00863903_0_10000.ply  00864009_0_10000.ply  00864584_0_10000.ply  00865236_0_10000.ply  00884784_0_10000.ply  00885156_0_10000.ply  00885627_3_10000.ply  00885784_0_10000.ply  00886630_0_10000.ply  00886727_0_10000.ply  00886829_0_10000.ply  00886830_0_10000.ply  00886833_0_10000.ply  00886849_0_10000.ply  00886856_0_10000.ply  00886870_0_10000.ply  00886879_0_10000.ply  00886881_0_10000.ply  00886882_0_10000.ply  00886884_0_10000.ply  00886885_0_10000.ply  00886886_0_10000.ply  00886887_0_10000.ply  00886891_0_10000.ply  00886895_0_10000.ply  00886901_0_10000.ply  00886904_0_10000.ply  00886918_0_10000.ply  00886924_0_10000.ply  00886925_0_10000.ply  00887740_0_10000.ply  00887775_0_10000.ply  00918704_1_10000.ply  00918704_3_10000.ply  00924410_0_10000.ply  00924716_0_10000.ply  00925898_1_10000.ply  00973146_2_10000.ply  00981334_0_10000.ply
data/subset_abc_seg/: 00863732_1_10000.seg  00863903_0_10000.seg  00864009_0_10000.seg  00864584_0_10000.seg  00865236_0_10000.seg  00884784_0_10000.seg  00885156_0_10000.seg  00885627_3_10000.seg  00885784_0_10000.seg  00886630_0_10000.seg  00886727_0_10000.seg  00886829_0_10000.seg  00886830_0_10000.seg  00886833_0_10000.seg  00886849_0_10000.seg  00886856_0_10000.seg  00886870_0_10000.seg  00886879_0_10000.seg  00886881_0_10000.seg  00886882_0_10000.seg  00886884_0_10000.seg  00886885_0_10000.seg  00886886_0_10000.seg  00886887_0_10000.seg  00886891_0_10000.seg  00886895_0_10000.seg  00886901_0_10000.seg  00886904_0_10000.seg  00886918_0_10000.seg  00886924_0_10000.seg  00886925_0_10000.seg  00887740_0_10000.seg  00887775_0_10000.seg  00918704_1_10000.seg  00918704_3_10000.seg  00924410_0_10000.seg  00924716_0_10000.seg  00925898_1_10000.seg  00973146_2_10000.seg  00981334_0_10000.seg
data/subset_abc_xyz/: 00863732_1_10000.xyz  00863903_0_10000.xyz  00864009_0_10000.xyz  00864584_0_10000.xyz  00865236_0_10000.xyz  00884784_0_10000.xyz  00885156_0_10000.xyz  00885627_3_10000.xyz  00885784_0_10000.xyz  00886630_0_10000.xyz  00886727_0_10000.xyz  00886829_0_10000.xyz  00886830_0_10000.xyz  00886833_0_10000.xyz  00886849_0_10000.xyz  00886856_0_10000.xyz  00886870_0_10000.xyz  00886879_0_10000.xyz  00886881_0_10000.xyz  00886882_0_10000.xyz  00886884_0_10000.xyz  00886885_0_10000.xyz  00886886_0_10000.xyz  00886887_0_10000.xyz  00886891_0_10000.xyz  00886895_0_10000.xyz  00886901_0_10000.xyz  00886904_0_10000.xyz  00886918_0_10000.xyz  00886924_0_10000.xyz  00886925_0_10000.xyz  00887740_0_10000.xyz  00887775_0_10000.xyz  00918704_1_10000.xyz  00918704_3_10000.xyz  00924410_0_10000.xyz  00924716_0_10000.xyz  00925898_1_10000.xyz  00973146_2_10000.xyz  00981334_0_10000.xyz
efficient_ransac/: CMakeLists.txt
io/: CMakeLists.txt  io.h  io_construct_element.cpp  io_load.cpp  io_save.cpp
lp/: CMakeLists.txt  linear_program.h  linear_program_solver.h  linear_program_solver_LPSOLVE.cpp  linear_program_solver_SCIP.cpp
quadrics/: CMakeLists.txt  fitting.cpp  fitting.h
ransac/: CMakeLists.txt
src/: base.h  data_io.h  main.cpp  mesh_boolean.cpp  mesh_boolean.h  point_set.cpp  point_set.h
